--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body{
 
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 
 
 nav{
@@ -67,10 +68,11 @@ nav{
 
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 
 
 main{
-    margin: 20px 0;
+    margin: 50px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,11 +83,18 @@ main > p{
     text-align: center;
 }
 
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
 .pricing-container{
     background-color: var(--text-col);
-    margin: 20px 0;
+    margin: 50px 0;
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 700px;
+    height: 165px;
+    border-radius: 6px;
 }
 
 .pricing-container h2,
@@ -106,3 +115,24 @@ main > p{
     width: 10%;
 }
 
+.rocket{
+    position: absolute;
+    left: 25%;
+    top: 23%;
+}
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+table{
+    width: 90%;
+}
+
+th{
+    text-align: left;
+}
+
+th,
+td{
+    padding: 10px 0;
+    border-bottom: 1px solid var(--secondary-col);
+}
