--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header{
 nav{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .nav-links{
@@ -223,7 +223,9 @@ main > p{
 /* Table */
 
 table{
-    width: 90%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th{
@@ -273,3 +275,7 @@ table tr:nth-child(3) td{
     padding: 20px 0;
     border-color: transparent;
 }
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+/* form */
