--- a/style.css
+++ b/style.css
@@ -213,8 +213,9 @@ main > p{
 
 .rocket{
     position: absolute;
-    left: 26%;
-    top: 23%;
+    left: 28%;
+    top: 27%;
+    height: 20%;
 }
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
