--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
 :root{
     --background-col: hsl(0, 0%, 13%);
     --primary-col: hsl(16, 81%, 58%);
-    /* --secondary-col: hsla(0, 18%, 91%, 0.251); */
-    --secondary-col: hsl(0, 1%, 34%);
-    --border-col: hsl(0, 1%, 18%);
+    --medium-gray: hsl(0, 1%, 34%);
+    --light-gray: hsl(0, 0%, 70%);
+    --dark-gray: hsl(0, 1%, 18%);
     --hover-col: hsla(0, 0%, 31%, 0.251);
-    --text-col: hsl(0, 0%, 100%);
 }
 
 *,
@@ -17,7 +16,7 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica, sans-serif;
-    color: var(--text-col);
+    color: #fff;
 }
 
 *::selection{
@@ -77,7 +76,7 @@ nav{
 }
 
 .li-cta{
-    background-color: var(--secondary-col);
+    background-color: var(--medium-gray);
     border-radius: 15px;
     transition: all 250ms ease;
 }
@@ -86,6 +85,7 @@ nav{
     background-color: #fff;
 }
 
+/* Request Demo*/
 .nav-cta{
     padding: 5px 25px;
     text-decoration: none;
@@ -112,6 +112,16 @@ main{
     align-items: center;
 }
 
+h1{
+    font-size: 42px;
+}
+
+main > p{
+    font-size: 22px;
+    font-weight: lighter;
+    color: var(--light-gray);
+}
+
 h1,
 main > p{
     text-align: center;
@@ -122,7 +132,7 @@ main > p{
 /* Pricing container */
 
 .pricing-container{
-    background-color: var(--text-col);
+    background-color: #fff;
     margin: 50px 0;
     padding: 30px;
     display: flex;
@@ -167,8 +177,8 @@ main > p{
 
 .pricing-input input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
-    height: 17px;
-    width: 17px;
+    height: 20px;
+    width: 20px;
     background-color: #fff;
     margin-top: -4px;
     border: 3px solid var(--primary-col);
@@ -177,8 +187,8 @@ main > p{
 }
    
 .pricing-input input[type="range"]::-moz-range-thumb{
-    height: 17px;
-    width: 17px;
+    height: 20px;
+    width: 20px;
     background-color: #fff;
     margin-top: -4px;
     border: 1px solid var(--primary-col);
@@ -230,7 +240,7 @@ table{
 }
 
 tr{
-    border-bottom: 1px solid var(--border-col);
+    border-bottom: 1px solid var(--dark-gray);
 }
 
 th{
@@ -326,7 +336,7 @@ form input,
 form select{
     margin: 50px 20px;
     padding: 5px;
-    background-color: var(--secondary-col);
+    background-color: var(--medium-gray);
     border: 1px solid transparent;
     border-radius: 6px;
     font-weight: lighter;
